Fix user select on safari

--- a/alt-api-ui/src/schedule-viewer/ScheduleTimeline.module.sass
+++ b/alt-api-ui/src/schedule-viewer/ScheduleTimeline.module.sass
@@ -30,6 +30,8 @@
         margin: 0
         width: var(--timeline-time-width)
         user-select: none
+        -moz-user-select: none
+        -webkit-user-select: none
 
       hr
         margin: 0
